k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-dev
  labels:
    app.kubernetes.io/part-of: secure-three-tier-demo
